--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
    </div>
    <div class="info-panel" id="info-panel">
     <h3>Về phân tử NaCl</h3>
-    <p><strong>Quá trình:</strong> Natri (Na) mất 1 electron để trở thành Na⁺, Clo (Cl) nhận 1 electron để trở thành Cl⁻</p>
+    <p><strong>Quá trình:</strong> Sodium (Na) mất 1 electron để trở thành Na⁺, Chlorine (Cl) nhận 1 electron để trở thành Cl⁻</p>
     <p><strong>Liên kết:</strong> Lực hút tĩnh điện giữa ion Na⁺ và Cl⁻ tạo thành liên kết ion</p>
     <p><strong>Công thức:</strong> Na + Cl → Na⁺Cl⁻ (NaCl)</p>
    </div>
@@ -331,7 +331,7 @@
         ],
         info: {
           title: 'Về phân tử NaCl',
-          process: 'Natri (Na) mất 1 electron để trở thành Na⁺, Clo (Cl) nhận 1 electron để trở thành Cl⁻',
+          process: 'Sodium (Na) mất 1 electron để trở thành Na⁺, Chlorine (Cl) nhận 1 electron để trở thành Cl⁻',
           bond: 'Lực hút tĩnh điện giữa ion Na⁺ và Cl⁻ tạo thành liên kết ion',
           formula: 'Na + Cl → Na⁺Cl⁻ (NaCl)'
         },
@@ -354,7 +354,7 @@
         ],
         info: {
           title: 'Về phân tử CaCl₂',
-          process: 'Canxi (Ca) mất 2 electron để trở thành Ca²⁺, mỗi Clo (Cl) nhận 1 electron để trở thành Cl⁻',
+          process: 'Calcium (Ca) mất 2 electron để trở thành Ca²⁺, mỗi Chlorine (Cl) nhận 1 electron để trở thành Cl⁻',
           bond: 'Lực hút tĩnh điện giữa ion Ca²⁺ và 2 ion Cl⁻ tạo thành liên kết ion',
           formula: 'Ca + 2Cl → Ca²⁺(Cl⁻)₂ (CaCl₂)'
         },
@@ -379,7 +379,7 @@
         ],
         info: {
           title: 'Về phân tử Na₂O',
-          process: 'Mỗi Natri (Na) mất 1 electron để trở thành Na⁺, Oxy (O) nhận 2 electron để trở thành O²⁻',
+          process: 'Mỗi sodiunm (Na) mất 1 electron để trở thành Na⁺, Oxygen (O) nhận 2 electron để trở thành O²⁻',
           bond: 'Lực hút tĩnh điện giữa 2 ion Na⁺ và ion O²⁻ tạo thành liên kết ion',
           formula: '2Na + O → (Na⁺)₂O²⁻ (Na₂O)'
         },
@@ -877,3 +877,4 @@
   </script>
  <script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'999c851ee39e02be',t:'MTc2MjM0NzQ3OS4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
 </html>
+
